# minecraft-router-dns-manager

./: .gitignore  Dockerfile  config.example.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
example_server_dir/gtnh/: docker-compose.yaml
example_server_dir/paper/: docker-compose.yaml
mc_router_dns_manager/: __main__.py  config.py  dns.py  dnspod.py  docker_watcker_client.py  logger.py  mcdns.py  mcrouter.py  mcrouter_client.py  monitorer.py  natmap_monitor_client.py  record_updater.py  service_monitor.py  updater.py
mc_router_dns_manager/client/: docker_watcher_client.py  docker_watcker_client.py  natmap_monitor_client.py
mc_router_dns_manager/dns/: dns.py  dnspod.py  huawei.py  mcdns.py
mc_router_dns_manager/manager/: local.py  remote.py
mc_router_dns_manager/monitor/: docker_watcher.py  natmap_monitor_client.py
mc_router_dns_manager/router/: mcrouter.py  mcrouter_client.py
tests/: test_dns.py  test_manager.py  test_mcdns.py  test_mcrouter.py  test_updater.py
