[tool.poetry]
name = "minecraft-router-dns-manager"
version = "1.0.3"
description = "a tool that automatically manages mc-router and dns records for minecraft docker"
authors = ["xyqyear <xyqyear@gmail.com>"]
readme = "README.md"
packages = [{ include = "mc_router_dns_manager" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.5"
tencentcloud-sdk-python = "^3.0.973"
huaweicloudsdkdns = "^3.1.111"
minecraft-docker-manager-lib = {git = "https://github.com/xyqyear/minecraft-docker-manager-lib", rev = "v0.1.7"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.1"
setuptools = "^73.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
